--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Lato;
+}
+
+.navi_effect:hover {
+  -webkit-box-shadow: rgba(33, 22, 22, 0.7);
+          box-shadow: rgba(33, 22, 22, 0.7);
+  opacity: 0.8;
+  -webkit-transform: scale(1.03);
+          transform: scale(1.03);
+}
+
+.navi_effect:active {
+  -webkit-transform: scale(0.98);
+          transform: scale(0.98);
+}
+
 body {
   margin: 0 auto;
   max-width: 1600px;
@@ -35,6 +54,7 @@ header {
 }
 
 .header_left_search {
+  border: none;
   width: 30px;
   height: 30px;
   background: url(img/header-left-img2.png) no-repeat top;
@@ -47,6 +67,8 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-item-align: center;
+      align-self: center;
 }
 
 .header_right_icon {
@@ -71,8 +93,85 @@ header {
   background: url(img/Forma3.svg) no-repeat;
 }
 
+#btn {
+  position: absolute;
+  visibility: hidden;
+}
+
+ul {
+  display: block;
+  visibility: hidden;
+  width: 230px;
+  margin-left: 128px;
+  height: 635px;
+  padding: 15px 35px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  background-color: #ffffff;
+  list-style: none;
+  position: absolute;
+  top: 75px;
+  right: auto;
+  z-index: 20;
+}
+
+#btn:checked ~ ul {
+  visibility: visible;
+}
+
+ul a {
+  text-decoration: none;
+}
+
+ul li {
+  margin-bottom: 11px;
+}
+
+li > h3 {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 17px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #000000;
+  margin-bottom: 24px;
+  text-transform: uppercase;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.category {
+  text-transform: uppercase;
+  color: #f16d7f;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 17px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin-top: 20px;
+  margin-bottom: 12px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.category_detail {
+  color: #6f6e6e;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 17px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin-bottom: 11px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin-left: 20px;
+}
+
 .topcontent {
-  background-color: #F1E4E6;
+  background-color: #f1e4e6;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -81,22 +180,25 @@ header {
 .sectionlogo {
   background: url(img/top_img.png) no-repeat;
   width: 601px;
-  min-height: 488px;
+  min-height: 635px;
+  background-size: cover;
 }
 
 .toptext {
-  margin-top: 190px;
-  margin-right: 64px;
+  font-family: Lato;
   min-height: 93px;
   max-width: 405px;
   text-transform: uppercase;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-left: 60px;
+  -ms-flex-item-align: center;
+      align-self: center;
 }
 
 .style {
-  background-color: #F16D7F;
+  background-color: #f16d7f;
   height: 93px;
   width: 12px;
   margin-right: 16px;
@@ -119,9 +221,266 @@ header {
   font-size: 32px;
   font-weight: 700;
   line-height: 38px;
-  letter-spacing: 0em;
+  letter-spacing: 0;
   text-align: left;
-  margin: 0 0 0 0;
+  margin: 0;
+}
+
+main {
+  max-width: 1140px;
+  margin: 0 auto;
+  padding-top: 65px;
+  padding-bottom: 95px;
+}
+
+.filter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-item-align: center;
+      align-self: center;
+  text-transform: uppercase;
+}
+
+.filter_women {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7))), url(img/filters/women.png);
+  background: linear-gradient(rgba(0, 0, 0, 0.7)), url(img/filters/women.png);
+}
+
+.filter_men {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7))), url(img/filters/men.png);
+  background: linear-gradient(rgba(0, 0, 0, 0.7)), url(img/filters/men.png);
+}
+
+.filter_kids {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7))), url(img/filters/kids.png);
+  background: linear-gradient(rgba(0, 0, 0, 0.7)), url(img/filters/kids.png);
+}
+
+.top_box {
+  height: 260px;
+  max-width: 360px;
+  margin-bottom: 30px;
+  text-align: center;
+  width: 100%;
+}
+
+.top_line {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7))), url(img/filters/accessories.png);
+  background: linear-gradient(rgba(0, 0, 0, 0.7)), url(img/filters/accessories.png);
+  height: 180px;
+  width: 100%;
+  position: center;
+}
+
+.top_box > p {
+  margin-top: 105px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #ffffff;
+}
+
+.top_box > h2 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+  text-align: center;
+  color: #f16d7f;
+}
+
+.top_line > p {
+  margin-top: 65px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #ffffff;
+}
+
+.top_line > h2 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+  text-align: center;
+  color: #f16d7f;
+}
+
+.fetured {
+  margin-top: 100px;
+  text-align: center;
+  margin-bottom: 48px;
+}
+
+.fetured > h3 {
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 36px;
+  color: #222222;
+}
+
+.fetured > p {
+  font-family: Lato;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: #9f9f9f;
+}
+
+.items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.products-item {
+  width: 360px;
+  margin: 0;
+  position: relative;
+  background: #f8f8f8;
+  margin-bottom: 30px;
+}
+
+.products-item:hover .products-item-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.products-item:hover .products-item-btn:hover {
+  background-color: #ccc;
+  color: #000;
+  border: 1px solid #000;
+}
+
+.products-item:hover .products-item-btn:hover svg {
+  fill: #000;
+}
+
+.products-item:hover .products-item-btn:active {
+  background-color: transparent;
+  color: #fff;
+  border: 1px solid #fff;
+}
+
+.products-item:hover .products-item-btn:active svg {
+  fill: #fff;
+}
+
+.products-item:hover .products-item-photo {
+  -webkit-filter: brightness(50%);
+          filter: brightness(50%);
+}
+
+.products-item-photo {
+  display: block;
+  max-width: 100%;
+  margin: 0 auto;
+  height: 420px;
+}
+
+.products-item-txt-wrp {
+  padding: 25px 18px 20px 18px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  text-align: left;
+}
+
+.products-item-title {
+  display: block;
+  margin: 0 0 12px 0;
+  text-transform: uppercase;
+  font-size: 13px;
+  line-height: 16px;
+  color: #000000;
+}
+
+.products-item-txt {
+  margin: 0 0 18px 0;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 17px;
+  color: #5d5d5d;
+}
+
+.products-item-price {
+  display: block;
+  margin: 0;
+  font-size: 16px;
+  line-height: 19px;
+  color: #f16d7f;
+}
+
+.products-item-btn {
+  display: none;
+  /* display: flex; */
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 38.3%;
+  min-height: 43px;
+  border: 1px solid #ffffff;
+  background: transparent;
+  text-align: center;
+  font-size: 14px;
+  line-height: 17px;
+  color: #ffffff;
+  position: absolute;
+  top: 188px;
+  left: 32.7%;
+}
+
+.products-item-btn svg {
+  fill: #fff;
+  margin: 0 11px 0 0;
+}
+
+.button_for_items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.browse_btn {
+  background: #f16d7f;
+  height: 48px;
+  width: 212px;
+  margin-top: 50px;
+  margin-bottom: 100px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  border: none;
+  text-decoration: none;
+  color: white;
 }
 
 .aboutus {
@@ -135,7 +494,7 @@ header {
   padding-left: 130px;
   padding-right: 130px;
   background-color: #222224;
-  min-height: 340px;
+  min-height: 230px;
   padding-top: 100px;
 }
 
@@ -169,7 +528,7 @@ header {
 }
 
 .info > h3 {
-  color: #FBFBFB;
+  color: #fbfbfb;
   font-size: 20px;
   font-weight: 400;
   line-height: 24px;
@@ -177,7 +536,7 @@ header {
 }
 
 .info > p {
-  color: #FBFBFB;
+  color: #fbfbfb;
   font-size: 14px;
   font-weight: 300;
   line-height: 17px;
@@ -212,6 +571,7 @@ header {
 }
 
 .subscribe_left_text {
+  font-family: Lato;
   margin-top: 30px;
   color: #222224;
   font-size: 20px;
@@ -230,6 +590,7 @@ header {
 
 .subscribe_right_text {
   text-transform: uppercase;
+  font-family: Lato;
   color: #222224;
   text-align: center;
 }
@@ -239,7 +600,7 @@ header {
   font-weight: 700;
   line-height: 40px;
   letter-spacing: 0em;
-  margin: 0 0 0 0;
+  margin: 0;
 }
 
 .subscribe_right_text > p {
@@ -247,7 +608,7 @@ header {
   font-weight: 400;
   line-height: 30px;
   letter-spacing: 0em;
-  margin: 0 0 0 0;
+  margin: 0;
 }
 
 .form {
@@ -260,20 +621,24 @@ header {
   max-width: 360px;
   min-height: 50px;
   max-width: 356px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .form_email {
   background: #e1e1e1;
   padding-left: 22px;
   color: #222224;
-  border-radius: 16px;
-  margin-left: 55px;
+  border-top-left-radius: 16px;
+  border-bottom-left-radius: 16px;
   border: none;
+  min-width: 260px;
 }
 
 .form_button {
-  background: #F16D7F;
-  margin-left: -14px;
+  min-width: 100px;
+  background: #f16d7f;
   color: #ffffff;
   border-top-right-radius: 22px;
   border-bottom-right-radius: 22px;
@@ -294,6 +659,7 @@ footer {
 }
 
 .copyright {
+  font-family: Lato;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
@@ -303,7 +669,7 @@ footer {
   line-height: 19px;
   letter-spacing: 0em;
   text-align: left;
-  color: #FBFBFB;
+  color: #fbfbfb;
 }
 
 .links {
