--- a/style_catalog.css
+++ b/style_catalog.css
@@ -103,7 +103,7 @@ ul {
   visibility: hidden;
   width: 230px;
   margin-left: 128px;
-  height: 635px;
+  min-height: 635px;
   padding: 15px 35px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -113,6 +113,7 @@ ul {
   top: 75px;
   right: auto;
   z-index: 20;
+  line-height: 1.2;
 }
 
 #btn:checked ~ ul {
@@ -169,176 +170,60 @@ li > h3 {
   margin-left: 20px;
 }
 
-.topcontent {
-  background-color: #f1e4e6;
+.top_line {
+  height: 150px;
+  padding-left: 130px;
+  padding-right: 130px;
+  background-color: #f8f3f4;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
-.sectionlogo {
-  background: url(img/top_img.png) no-repeat;
-  width: 601px;
-  min-height: 635px;
-  background-size: cover;
-}
-
-.toptext {
-  font-family: Lato;
-  min-height: 93px;
-  max-width: 405px;
+.right_box {
   text-transform: uppercase;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: 60px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 29px;
+  color: #f16d7f;
   -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
       align-self: center;
 }
 
-.style {
-  background-color: #f16d7f;
-  height: 93px;
-  width: 12px;
-  margin-right: 16px;
+.left_box {
+  text-transform: uppercase;
+  text-decoration: none;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
-.textstyle {
-  color: #222222;
+.breadcrumb-item > a {
+  text-decoration: none;
+  color: #636363;
 }
 
-.textstyle > h3 {
-  font-size: 48px;
-  font-weight: 900;
-  line-height: 58px;
-  letter-spacing: 0em;
-  text-align: left;
-  margin: 0 0 0 0;
-}
-
-.textstyle > p {
-  font-size: 32px;
-  font-weight: 700;
-  line-height: 38px;
-  letter-spacing: 0;
-  text-align: left;
-  margin: 0;
+.breadcrumb > .active {
+  color: #f16d7f;
 }
 
 main {
-  max-width: 1140px;
-  margin: 0 auto;
-  padding-top: 65px;
-  padding-bottom: 95px;
+  padding-left: 130px;
+  padding-right: 130px;
 }
 
 .filter {
+  min-height: 132px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-item-align: center;
-      align-self: center;
-  text-transform: uppercase;
-}
-
-.filter_women {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7))), url(img/filters/women.png);
-  background: linear-gradient(rgba(0, 0, 0, 0.7)), url(img/filters/women.png);
-}
-
-.filter_men {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7))), url(img/filters/men.png);
-  background: linear-gradient(rgba(0, 0, 0, 0.7)), url(img/filters/men.png);
-}
-
-.filter_kids {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7))), url(img/filters/kids.png);
-  background: linear-gradient(rgba(0, 0, 0, 0.7)), url(img/filters/kids.png);
-}
-
-.top_box {
-  height: 260px;
-  max-width: 360px;
-  margin-bottom: 30px;
-  text-align: center;
-  width: 100%;
-}
-
-.top_line {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7))), url(img/filters/accessories.png);
-  background: linear-gradient(rgba(0, 0, 0, 0.7)), url(img/filters/accessories.png);
-  height: 180px;
-  width: 100%;
-  position: center;
-}
-
-.top_box > p {
-  margin-top: 105px;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 19px;
-  letter-spacing: 0em;
-  text-align: center;
-  color: #ffffff;
-}
-
-.top_box > h2 {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 24px;
-  line-height: 29px;
-  text-align: center;
-  color: #f16d7f;
-}
-
-.top_line > p {
-  margin-top: 65px;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 19px;
-  letter-spacing: 0em;
-  text-align: center;
-  color: #ffffff;
-}
-
-.top_line > h2 {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 24px;
-  line-height: 29px;
-  text-align: center;
-  color: #f16d7f;
-}
-
-.fetured {
-  margin-top: 100px;
-  text-align: center;
-  margin-bottom: 48px;
-}
-
-.fetured > h3 {
-  font-size: 30px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 36px;
-  color: #222222;
-}
-
-.fetured > p {
-  font-family: Lato;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 17px;
-  color: #9f9f9f;
 }
 
 .items {
@@ -467,19 +352,35 @@ main {
           justify-content: center;
 }
 
-.browse_btn {
-  background: #f16d7f;
-  height: 48px;
-  width: 212px;
-  margin-top: 50px;
-  margin-bottom: 100px;
+.page_numbers {
+  margin: 48px auto 96px auto;
+  min-height: 44px;
+  max-width: 285px;
+  width: 100%;
+  border: 1px solid #ebebeb;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 300;
   font-size: 16px;
   line-height: 19px;
-  border: none;
-  text-decoration: none;
-  color: white;
+  text-align: justify;
+  color: #c4c4c4;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.right_arrow {
+  font-size: 2rem;
+  text-align: right;
+  color: #000000;
+}
+
+.left_arrow {
+  font-size: 2rem;
+  text-align: left;
+  color: #000000;
 }
 
 .aboutus {
@@ -707,4 +608,4 @@ footer {
 .links_4 {
   background: url(img/footer_img4.svg);
 }
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=style_catalog.css.map */
